# GraphLP

./: .gitignore  BipartiteGraph.cc  BipartiteGraph.h  CMakeLists.txt  GraphMatching  README.md  TDefs.h  Vertex.cc  Vertex.h  a.out  compile.sh  lpsolver.sh  main.cc  makeo.sh  quadcplex.xml  quadlp.txt  quadtemp.txt  rcompile.sh  rev.cc  solution.txt  tricplexout.xml  trilp.txt  tritemp.txt
conv/: convert.py  out.txt  quadsol.xml  trisol.xml
include/: PreferenceList.h
lib/: BipartiteGraph.cc  CMakeLists.txt  GraphReader.cc  PreferenceList.cc
solver/: convert.py  mipex2.py  quadtemp.txt  reverse.sh  start.sh  tritemp.txt
temp/: quadtemp.txt
test_instances/: 1.txt  10-a.txt  10-b.txt  10-c.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  8cap.txt  8err  9.txt  a.out  gen.cpp  gen.sh  lp-1.txt  lp-10-a.txt  lp-10-b.txt  lp-10-c.txt  lp-2.txt  lp-3.txt  lp-4.txt  lp-5.txt  lp-6.txt  lp-7.txt  lp-8.txt  lp-9.txt  start.sh
